@@ -73,134 +73,6 @@ AC_CHECK_HEADER([xapian.h], [],
 CXXFLAGS="$OLD_CXXFLAGS"
 LIBS="$OLD_LIBS"
 
-WANT_HAVE_EPT=1
-AC_ARG_ENABLE(ept,
-	AS_HELP_STRING(--disable-ept, [disable use of ept library]),
-	[if test x$enableval = xno
-	 then
-	     WANT_HAVE_EPT=0
-	 fi])
-
-
-############################ CHECKS FOR EPT ############################
-
-HAVE_EPT=0
-AS_IF(
-  [test x$WANT_HAVE_EPT = x1],
-  [
-HAVE_EPT=1
-PKG_CHECK_MODULES([ept], [libept], [],
-  [AC_MSG_ERROR([Can't find the ept library -- please install libept-dev])])
-
-OLD_CXXFLAGS="$CXXFLAGS"
-
-CXXFLAGS="$CXXFLAGS $ept_CFLAGS"
-
-DEBTAGS_OK=0
-
-AC_MSG_CHECKING([whether ept::debtags::getTagsOfItem returns a set of strings.])
-AC_COMPILE_IFELSE([AC_LANG_SOURCE([
-#include <ept/debtags/debtags.h>
-
-int main(int argc, char **argv)
-{
-  // This would always crash, but we only care if it type-checks.
-  ept::debtags::Debtags DB;
-  std::set<std::string> result = DB.getTagsOfItem("foo");
-
-  return 0;
-}
-])],
-        [
-        AC_MSG_RESULT(yes)
-        AC_DEFINE([EPT_DEBTAGS_GETTAGSOFITEM_RETURNS_STRINGS], [], [Define if ept::debtags::Debtags::getTagsOfItem returns a set of strings])
-        DEBTAGS_OK=1
-        ],
-        [
-        AC_MSG_RESULT(no)
-        ])
-
-if test x$DEBTAGS_OK = x0
-then
-  AC_MSG_FAILURE([Can't figure out how to access the ept debtags database.])
-fi
-
-TEXTSEARCH_OK=0
-
-dnl Check ept for apt-xapian-index support.
-AC_MSG_CHECKING([whether ept/axi exists])
-AC_COMPILE_IFELSE([AC_LANG_SOURCE([
-#include <ept/axi/axi.h>
-
-int main(int argc, char **argv)
-{
-  Xapian::Database db(ept::axi::path_db());
-
-  return 0;
-}])],
-        [
-        AC_MSG_RESULT([yes])
-        AC_DEFINE([HAVE_EPT_AXI], [], [Define if ept/axi/axi.h can provide docids.])
-        TEXTSEARCH_OK=1
-        ],
-        [AC_MSG_RESULT([no])])
-
-if test x$TEXTSEARCH_OK = x0
-then
-  AC_MSG_FAILURE([Can't figure out how to access the ept Xapian database.])
-fi
-
-AC_MSG_CHECKING([whether ept::debtags::Vocabulary::tagData exists and returns ept::debtags::voc::TagData *])
-
-AC_COMPILE_IFELSE([AC_LANG_SOURCE([
-#include <ept/debtags/vocabulary.h>
-
-int main(int argc, char **argv)
-{
-  ept::debtags::Vocabulary vocabulary;
-  const ept::debtags::voc::TagData *td = vocabulary.tagData("foo");
-
-  // Use td so the compiler doesn't complain:
-  return td == NULL ? 1 : 0;
-}])],
-        [
-        AC_MSG_RESULT([yes])
-        AC_DEFINE([HAVE_EPT_DEBTAGS_VOCABULARY_TAG_DATA], [], [Define if the ept debtags vocabulary object exists and supports tagData()])
-        ],
-        [AC_MSG_RESULT([no])])
-
-
-AC_MSG_CHECKING([whether ept::debtags::Vocabulary::facetData exists and returns ept::debtags::voc::FacetData *])
-
-AC_COMPILE_IFELSE([AC_LANG_SOURCE([
-#include <ept/debtags/vocabulary.h>
-
-int main(int argc, char **argv)
-{
-  ept::debtags::Vocabulary vocabulary;
-  const ept::debtags::voc::FacetData *fd = vocabulary.facetData("foo");
-
-  // Use fd so the compiler doesn't complain:
-  return fd == NULL ? 1 : 0;
-}])],
-        [
-        AC_MSG_RESULT([yes])
-        AC_DEFINE([HAVE_EPT_DEBTAGS_VOCABULARY_FACET_DATA], [], [Define if the ept debtags vocabulary object exists and supports facetData()])
-        ],
-        [AC_MSG_RESULT([no])])
-
-CXXFLAGS="$OLD_CXXFLAGS"
-  ], dnl test x$WANT_HAVE_EPT = x0
-
-  [AC_MSG_NOTICE([The ept library is not being used; use --enable-ept to enable it.])])
-
-if test x$HAVE_EPT = x1
-then
-  AC_DEFINE([HAVE_EPT], [], [Define if the ept library is to be used.])
-fi
-
-########################################################################
-
 PKG_CHECK_MODULES(SIGC, sigc++-2.0)
 
 PKG_CHECK_MODULES(CWIDGET, cwidget)
