@@ -24,8 +24,6 @@
 
 #include "apt.h"
 
-#ifndef HAVE_EPT
-
 #include "config_signal.h"
 
 #include <algorithm>
@@ -395,150 +393,6 @@ std::string aptitude::apt::get_tag_short_description(const tag &t)
   const string desc = get_tag_long_description(t);
   return string(desc, 0, desc.find('\n'));
 }
-
-#else // HAVE_EPT
-
-#if defined(HAVE_EPT_DEBTAGS_VOCABULARY_FACET_DATA) || defined(HAVE_EPT_DEBTAGS_VOCABULARY_TAG_DATA)
-#define USE_VOCABULARY 1
-#endif
-
-#include <ept/debtags/debtags.h>
-#ifdef USE_VOCABULARY
-#include <ept/debtags/vocabulary.h>
-#endif
-
-namespace aptitude
-{
-  namespace apt
-  {
-    const ept::debtags::Debtags *debtagsDB;
-
-#ifdef USE_VOCABULARY
-    const ept::debtags::Vocabulary *debtagsVocabulary;
-#endif
-
-    void reset_tags()
-    {
-      delete debtagsDB;
-      debtagsDB = NULL;
-
-#ifdef USE_VOCABULARY
-      delete debtagsVocabulary;
-      debtagsVocabulary = NULL;
-#endif
-    }
-
-    bool initialized_reset_signal;
-    void load_tags(OpProgress &progress)
-    {
-      if(!initialized_reset_signal)
-	{
-	  cache_closed.connect(sigc::ptr_fun(reset_tags));
-	  cache_reload_failed.connect(sigc::ptr_fun(reset_tags));
-	  initialized_reset_signal = true;
-	}
-
-      try
-	{
-	  debtagsDB = new ept::debtags::Debtags;
-#ifdef USE_VOCABULARY
-          debtagsVocabulary = new ept::debtags::Vocabulary;
-#endif
-	}
-      catch(std::exception &ex)
-	{
-	  // If debtags failed to initialize, just leave it
-	  // uninitialized.
-	  debtagsDB = NULL;
-#ifdef USE_VOCABULARY
-          debtagsVocabulary = NULL;
-#endif
-	}
-    }
-
-    const std::set<tag> get_tags(const pkgCache::PkgIterator &pkg)
-    {
-      if(!apt_cache_file || !debtagsDB)
-	return std::set<tag>();
-
-      // TODO: handle !hasData() here.
-      try
-	{
-	  return debtagsDB->getTagsOfItem(pkg.Name());
-	}
-      catch(std::exception &ex)
-	{
-	  return std::set<tag>();
-	}
-    }
-
-#ifdef HAVE_EPT_DEBTAGS_VOCABULARY_FACET_DATA
-    std::string get_facet_long_description(const tag &t)
-    {
-      if(debtagsVocabulary == NULL)
-        return string();
-
-      const ept::debtags::voc::FacetData * const fd =
-        debtagsVocabulary->facetData(get_facet_name(t));
-
-      if(fd == NULL)
-        return string();
-      else
-        return fd->longDescription();
-    }
-
-    std::string get_facet_short_description(const tag &t)
-    {
-      if(debtagsVocabulary == NULL)
-        return string();
-
-      const ept::debtags::voc::FacetData * const fd =
-        debtagsVocabulary->facetData(get_facet_name(t));
-
-      if(fd == NULL)
-        return string();
-      else
-        return fd->shortDescription();
-    }
-#else
-#error "Don't know how to retrieve facet descriptions."
-#endif
-
-#ifdef HAVE_EPT_DEBTAGS_VOCABULARY_TAG_DATA
-    std::string get_tag_long_description(const tag &t)
-    {
-      if(debtagsVocabulary == NULL)
-        return string();
-
-      const ept::debtags::voc::TagData * const td =
-        debtagsVocabulary->tagData(t);
-
-      if(td == NULL)
-        return string();
-      else
-        return td->longDescription();
-    }
-
-    std::string get_tag_short_description(const tag &t)
-    {
-      if(debtagsVocabulary == NULL)
-        return _("No tag descriptions are available.");
-
-      const ept::debtags::voc::TagData * const td =
-        debtagsVocabulary->tagData(get_fullname(t));
-
-      if(td == NULL)
-        return string();
-      else
-        return td->shortDescription();
-    }
-#else
-#error "Don't know how to retrieve tag descriptions."
-#endif
-  }
-}
-
-#endif // HAVE_EPT
 
 namespace aptitude
 {
