@@ -15,6 +15,8 @@ Version 0.6.11
 
   * Standardize on a single package tags interface.
 
+  * No longer use libept. (Closes: #504153, #677551)
+
 - Documentation:
 
 - Translation updates:
